tests/errors/surf_sw_07.experr
expected an indented switch body
